update index file

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hi, Git....</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil sequi, nostrum placeat voluptatem commodi magnam soluta! Necessitatibus, vitae culpa! Debitis, molestiae fugit cumque totam neque veniam recusandae aspernatur magnam dolorum?</p>
 </body>
 </html>
